@@ -31,6 +31,9 @@ use "~~/src/Provers/Arith/abel_cancel.ML";
 use "~~/src/Provers/Arith/assoc_fold.ML";
 use "~~/src/Provers/quantifier1.ML";
 use "~~/src/Provers/Arith/combine_coeff.ML";
+use "~~/src/Provers/Arith/inverse_fold.ML";
+use "~~/src/Provers/Arith/cancel_numerals.ML";
+use "~~/src/Provers/Arith/fold_Suc.ML";
 
 with_path "Integ" use_thy "Main";
 
