@@ -110,6 +110,9 @@ Arithmetic, by Thomas M Rasmussen;
 basically a generalized version of de-Bruijn representation; very
 useful in avoiding lifting all operations;
 
+* greatly improved simplification involving numerals of type "nat", e.g. in
+   (i + #8 + j) = Suc k simplifies to  #7 + (i + j) = k;
+
 * new version of "case_tac" subsumes both boolean case split and
 "exhaust_tac" on datatypes; INCOMPATIBILITY: exhaust_tac no longer
 exists, may define val exhaust_tac = case_tac for ad-hoc portability;
